<resources>
    <string name="app_name">OnlinePrakasam</string>
    <string name="latest_news">జిల్లా తాజా</string>
    <string name="state">రాష్ట్ర / జాతీయ</string>
    <string name="topStories">టాప్ స్టోరీస్</string>
    <string name="politics">ప్రకాశం పాలిటిక్స్</string>
    <string name="investigation">ఇన్వెస్టిగేషన్ /క్రైమ్</string>
    <string name="editorial">ఎడిటోరియల్</string>
    <string name="about_us">About Us</string>
    <string name="terms_and_service">Terms and Service</string>
    <string name="share">Share</string>
    <string name="home">Home</string>


    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="no_data_found">No Data Found</string>
    <string name="news">News</string>


    <string name="fcm_token" translatable="false">FCM Token: %s</string>

    <string name="access__news">Hi, I found this info on Online Praksam App. Hope it is helpful for you %s</string>
    <string name="refer_app">Refer App</string>
    <string name="rate_us">Rate Us</string>


    <!--<string name="admob_app_id">ca-app-pub-6293458907707753~6748095462</string>
    <string name="admob_banner_id">ca-app-pub-6293458907707753/5051870412</string>
    <string name="admob_native_id">ca-app-pub-6293458907707753/1033089577</string>-->

    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="admob_banner_id">ca-app-pub-3940256099942544/6300978111</string>
    <string name="admob_native_id">ca-app-pub-3940256099942544/8135179316</string>
</resources>
