<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/navigation_latest_news"
            android:icon="@drawable/latestnews"
            android:title="@string/latest_news" />
        <item
            android:id="@+id/navigation_state"
            android:icon="@drawable/stateandnational"
            android:title="@string/state" />

        <item
            android:id="@+id/navigation_top_stories"
            android:icon="@drawable/topstories"
            android:title="@string/topStories" />


        <item
            android:id="@+id/navigation_politics"
            android:icon="@drawable/praksampolitics"
            android:title="@string/politics" />

        <item
            android:id="@+id/navigation_investigation"
            android:icon="@drawable/crimeinvestigation"
            android:title="@string/investigation" />



        <item
            android:id="@+id/navigation_editorial"
            android:icon="@drawable/editorial"
            android:title="@string/editorial" />


    </group>



    <group android:checkableBehavior="single">


        <item
            android:id="@+id/nav_share"
            android:title="@string/refer_app" />

        <item
            android:id="@+id/nav_rate"
            android:title="@string/rate_us" />
        <item
            android:title="@string/about_us" />

        <item
            android:title="@string/terms_and_service" />

    </group>


</menu>
